# cap-parking

./: .gitignore  Cargo.toml  readme.md  shell.nix
caparking_app/: Cargo.toml  index.css  index.html
caparking_app/src/: main.rs  network.rs
caparking_app/src/components/: header.rs  home_page.rs  mod.rs  page_home.rs  page_login.rs  page_resident.rs  page_residents.rs  residents.rs
caparking_lib/: Cargo.toml
caparking_lib/resources/: db.json  web-app
caparking_lib/src/: lib.rs
caparking_server/: Cargo.toml
caparking_server/resources/: db.json  web-app
caparking_server/src/: main.rs
caparking_server/src/guards/: mod.rs
caparking_server/src/routes/: login.rs  mod.rs  residents.rs
resources/: db.json
resources/web-app/: index.html
src/: lib.rs  main.rs
src/lib/: lib.rs
src/routes/: mod.rs  residents.rs
web-app/: Cargo.toml
web-server/: Cargo.toml
web-server/src/server/: main.rs
web-server/src/server/routes/: mod.rs  residents.rs
