[package]
name = "caparking-app"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name = "capark-app"
path = "src/main.rs"

[dependencies]
yew = "0.18.0"
yew-router = "0.15.0"
caparking_lib = { path = "../caparking_lib" }
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }
anyhow = "1.0.44"
log = "0.4.14"
wasm-logger = "0.2.0"