[package]
name = "caparking-app"
version = "0.1.0"
authors = []
edition = "2021"

[[bin]]
name = "capark-app"
path = "src/main.rs"

[dependencies]
caparking_lib = { path = "../caparking_lib" }

wasm-bindgen = {version="0.2.78", features = ["serde-serialize"]}
wasm-bindgen-futures = {version="0.4.28"}

rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }
log = "0.4.14"
wasm-logger = "0.2.0"
jsonwebtoken = "7.2.0"

yew = "0.19.3"
yew-router = "0.16.0"


web-sys = {version = "0.3", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]}

serde = "1.0.133"
serde_json = "1.0.74"

