[package]
name = "caparking-server"
version = "0.1.0"
authors = []
edition = "2018"


[[bin]]
name = "capark-server"
path = "src/main.rs"


[dependencies]
serde = "1.0.127"
serde_json = "1.0.66"
caparking_lib = { path = "../caparking_lib" }

[dependencies.rocket]
features = ["json"]
version = "0.5.0-rc.1"